1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, hex-document.c: add hint strings to menu descriptions.
	* callbacks.c (customize_app_cb): new function that inserts
	a statusbar and installs menu hints.
	(view_changed_cb): install hints for child's menus.
	* main.c: connect customize_app_cb to app_created signal.
	
1998-12-04  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): fixed initial toplevel window opening so
	that it works nice with session managment.

1998-12-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c ([ascii|hex]_[button|motion]_cb): fixed some
	scrolling bugs.

1998-11-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (main): comply to the latest changes to GnomeMDI API.
	* gtkhex.c (gtk_hex_realize): new realize signal handler for
	GtkHex: only sets the backing pixmap properly
	(gtk_hex_draw): fixed shadow redrawing.
	
1998-11-09  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (render_ascii_lines): fixed a bug that used adisp_gc
	instead of xdisp_gc.
	
1998-10-29  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 	
	* gtkhex.c: some cosmetic fixes; changed the way signals
	are connected to a GtkHex widget
	* main.c, hex-document.c: cosmetics.
	
1998-10-29  Jens Lautenbacher  <jens@tellux.de>

	* ui.c: visual clean-up

1998-10-29  Jens Lautenbacher  <jens@tellux.de>

	* ui.c (create_prefs_dialog): added standard gnome_font_picker
 	plus entry box, small fix in loop for group_types
	(set_prefs): use NUM_MDI_MODES

	* callbacks.c (select_font_cb): changed to work with new font selector
	(apply_changes_cb): ditto.; use NUM_MDI_MODES

	* ghex.h (_PropertyUI): ditto; use NUM_MDI_MODES
	(DEFAULT_FONT): added foundry for courier font to make font picker
 	happy

1998-10-29  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-support.c (parse_an_arg): add support for opening files
	specified on the command line.
	* hex-document.c (hex_document_new): return NULL if file can't be
	opened.